fixed index page

--- a/index.html
+++ b/index.html
@@ -11,65 +11,75 @@
     <!-- Start Header -->
     <header class="header">
       <ul class="header-menu">
-        <li class="menu-item">description</li>
-        <li class="menu-item">goals</li>
-        <li class="menu-item">rules</li>
-        <li class="menu-item">section</li>
+        <li class="menu-item"><a href="#" target="_blank">description</a></li>
+        <li class="menu-item"><a href="#" target="_blank">goals</a></li>
+        <li class="menu-item"><a href="#" target="_blank">rules</a></li>
+        <li class="menu-item"><a href="#" target="_blank">section</a></li>
       </ul>
     </header>
     <!-- End Header -->
     <!-- Start Main -->
     <main class="main">
-      <h1>DESCRIPTION</h1>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem voluptatum
-        nihil porro quas eaque itaque maiores quisquam delectus ex. Sit dolorem
-        distinctio veritatis optio assumenda quidem ab eos! Fuga sunt ipsam
-        quasi quos accusantium totam, veritatis voluptates esse iure porro sed
-        pariatur vitae, tempore temporibus dignissimos modi hic, nobis saepe.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
-        dolore officia optio dolores odio, excepturi quia, reprehenderit
-        voluptatibus maiores sapiente ut. Iusto voluptates a, adipisci nesciunt
-        at, accusantium expedita porro maiores explicabo dolor laudantium
-        provident assumenda, obcaecati amet dolore itaque ut praesentium.
-        Voluptate magni laboriosam ex officiis nisi voluptatum similique!
-      </p>
+      <!-- Start Aside -->
+      <aside class="aside">
+        <h1>DESCRIPTION</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem
+          voluptatum nihil porro quas eaque itaque maiores quisquam delectus ex.
+          Sit dolorem distinctio veritatis optio assumenda quidem ab eos! Fuga
+          sunt ipsam quasi quos accusantium totam, veritatis voluptates esse
+          iure porro sed pariatur vitae, tempore temporibus dignissimos modi
+          hic, nobis saepe.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+          dolore officia optio dolores odio, excepturi quia, reprehenderit
+          voluptatibus maiores sapiente ut. Iusto voluptates a, adipisci
+          nesciunt at, accusantium expedita porro maiores explicabo dolor
+          laudantium provident assumenda, obcaecati amet dolore itaque ut
+          praesentium. Voluptate magni laboriosam ex officiis nisi voluptatum
+          similique!
+        </p>
+      </aside>
+      <!-- End Aside -->
+      <!-- Start Section -->
+      <section class="section">
+        <section class="section-child">
+          <figure>
+            <img
+              class="images"
+              src="image/description.png"
+              alt="description logo"
+            />
+            <figcaption>Description</figcaption>
+          </figure>
+          <a href="#" class="link" target="_blank">more</a>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img class="images" src="image/goals.png" alt="goals logo" />
+            <figcaption>Goals</figcaption>
+          </figure>
+          <a href="#" class="link" target="_blank">more</a>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img class="images" src="image/rules.png" alt="rules logo" />
+            <figcaption>Rules</figcaption>
+          </figure>
+          <a href="#" class="link" target="_blank">more</a>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img class="images" src="image/section.png" alt="section logo" />
+            <figcaption>Section</figcaption>
+          </figure>
+          <a class="link" href="#" target="_blank">more</a>
+        </section>
+      </section>
+      <!-- End Section -->
     </main>
     <!-- End Main -->
-    <!-- Start Section -->
-    <section class="section">
-      <section class="section-child">
-        <figure>
-          <img class="images" src="image/description.png" alt="description logo" />
-          <figcaption>Description</figcaption>
-        </figure>
-        <a href="#">more</a>
-      </section>
-      <section class="section-child">
-        <figure>
-          <img class="images" src="image/goals.png" alt="goals logo" />
-          <figcaption>Goals</figcaption>
-        </figure>
-        <a href="#">more</a>
-      </section>
-      <section class="section-child">
-        <figure>
-          <img class="images" src="image/rules.png" alt="rules logo" />
-          <figcaption>Rules</figcaption>
-        </figure>
-        <a href="#">more</a>
-      </section>
-      <section class="section-child">
-        <figure>
-          <img class="images" src="image/section.png" alt="section logo" />
-          <figcaption>Section</figcaption>
-        </figure>
-        <a href="#">more</a>
-      </section>
-    </section>
-    <!-- End Section -->
     <!-- Start Footer -->
     <footer class="footer"></footer>
     <!-- End Footer -->
