--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     <!-- Start Header -->
     <header class="header">
       <ul class="header-menu">
-        <li class="menu-item"><a href="#" target="_blank">description</a></li>
-        <li class="menu-item"><a href="#" target="_blank">goals</a></li>
-        <li class="menu-item"><a href="#" target="_blank">rules</a></li>
-        <li class="menu-item"><a href="#" target="_blank">section</a></li>
+        <li class="menu-item">
+          <a href="index.html" target="_blank">description</a>
+        </li>
+        <li class="menu-item">
+          <a href="goals.html" target="_blank">goals</a>
+        </li>
+        <li class="menu-item">
+          <a href="rules.html" target="_blank">rules</a>
+        </li>
+        <li class="menu-item">
+          <a href="section.html" target="_blank">section</a>
+        </li>
       </ul>
     </header>
     <!-- End Header -->
@@ -53,28 +61,28 @@
             />
             <figcaption>Description</figcaption>
           </figure>
-          <a href="#" class="link" target="_blank">more</a>
+          <a href="index.html" class="link" target="_blank">more</a>
         </section>
         <section class="section-child">
           <figure>
             <img class="images" src="image/goals.png" alt="goals logo" />
             <figcaption>Goals</figcaption>
           </figure>
-          <a href="#" class="link" target="_blank">more</a>
+          <a href="goals.html" class="link" target="_blank">more</a>
         </section>
         <section class="section-child">
           <figure>
             <img class="images" src="image/rules.png" alt="rules logo" />
             <figcaption>Rules</figcaption>
           </figure>
-          <a href="#" class="link" target="_blank">more</a>
+          <a href="rules.html" class="link" target="_blank">more</a>
         </section>
         <section class="section-child">
           <figure>
             <img class="images" src="image/section.png" alt="section logo" />
             <figcaption>Section</figcaption>
           </figure>
-          <a class="link" href="#" target="_blank">more</a>
+          <a href="section.html" class="link" target="_blank">more</a>
         </section>
       </section>
       <!-- End Section -->
