editing and adding files and folders

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>simple website with flexbox</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <!-- Start Header -->
@@ -56,7 +56,7 @@
           <figure>
             <img
               class="images"
-              src="image/description.png"
+              src="../image/description.png"
               alt="description logo"
             />
             <figcaption>Description</figcaption>
@@ -65,21 +65,21 @@
         </section>
         <section class="section-child">
           <figure>
-            <img class="images" src="image/goals.png" alt="goals logo" />
+            <img class="images" src="../image/goals.png" alt="goals logo" />
             <figcaption>Goals</figcaption>
           </figure>
           <a href="goals.html" class="link" target="_blank">more</a>
         </section>
         <section class="section-child">
           <figure>
-            <img class="images" src="image/rules.png" alt="rules logo" />
+            <img class="images" src="../image/rules.png" alt="rules logo" />
             <figcaption>Rules</figcaption>
           </figure>
           <a href="rules.html" class="link" target="_blank">more</a>
         </section>
         <section class="section-child">
           <figure>
-            <img class="images" src="image/section.png" alt="section logo" />
+            <img class="images" src="../image/section.png" alt="section logo" />
             <figcaption>Section</figcaption>
           </figure>
           <a href="section.html" class="link" target="_blank">more</a>
