complated goals page

--- a/html/goals.html
+++ b/html/goals.html
@@ -1,12 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>simple website with flexbox</title>
+    <link rel="stylesheet" href="../css/style.css" />
+  </head>
+  <body>
+    <!-- Start Header -->
+    <header class="header">
+      <ul class="header-menu">
+        <li class="menu-item">
+          <a href="index.html" target="_blank">description</a>
+        </li>
+        <li class="menu-item">
+          <a href="goals.html" target="_blank">goals</a>
+        </li>
+        <li class="menu-item">
+          <a href="rules.html" target="_blank">rules</a>
+        </li>
+        <li class="menu-item">
+          <a href="section.html" target="_blank">section</a>
+        </li>
+      </ul>
+    </header>
+    <!-- End Header -->
+
+    <!-- Start Main -->
+    <main class="main">
+      <!-- Start Section -->
+      <section class="section">
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/goals.png"
+              alt="goals logo"
+              class="images-goals"
+            />
+            <figcaption>Goals-1</figcaption>
+          </figure>
+          <a href="#" target="_self" class="link">more</a>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/goals.png"
+              alt="goals logo"
+              class="images-goals"
+            />
+            <figcaption>Goals-2</figcaption>
+          </figure>
+          <a href="#" target="_self" class="link">more</a>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/goals.png"
+              alt="goals logo"
+              class="images-goals"
+            />
+            <figcaption>Goals-3</figcaption>
+          </figure>
+          <a href="#" target="_self" class="link">more</a>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/goals.png"
+              alt="goals logo"
+              class="images-goals"
+            />
+            <figcaption>Goals-4</figcaption>
+          </figure>
+          <a href="#" target="_self" class="link">more</a>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/goals.png"
+              alt="goals logo"
+              class="images-goals"
+            />
+            <figcaption>Goals-5</figcaption>
+          </figure>
+          <a href="#" target="_self" class="link">more</a>
+        </section>
+      </section>
+      <!-- End Section -->
+
+      <!-- Start Aside -->
+      <aside class="aside">
+        <h1>Goals :</h1>
+        <p>in IMD our goals are:xxxxx</p>
+        <p>
+          <span>Goals-1 : </span>Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Veritatis sequi impedit illum consequatur assumenda
+          repellat! Vitae, soluta asperiores. Incidunt deserunt cumque culpa
+          quibusdam porro nulla voluptate nostrum ducimus cum temporibus, illum
+          eius ipsam, quisquam ut? Eaque ratione voluptate iure cumque quos odit
+          culpa laborum cum laboriosam, quisquam eius facere cupiditate?
+        </p>
+        <p>
+          <span>Goals-2 : </span>Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Veritatis sequi impedit illum consequatur assumenda
+          repellat! Vitae, soluta asperiores. Incidunt deserunt cumque culpa
+          quibusdam porro nulla voluptate nostrum ducimus cum temporibus, illum
+          eius ipsam, quisquam ut? Eaque ratione voluptate iure cumque quos odit
+          culpa laborum cum laboriosam, quisquam eius facere cupiditate?
+        </p>
+        <p>
+          <span>Goals-3 : </span>Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Veritatis sequi impedit illum consequatur assumenda
+          repellat! Vitae, soluta asperiores. Incidunt deserunt cumque culpa
+          quibusdam porro nulla voluptate nostrum ducimus cum temporibus, illum
+          eius ipsam, quisquam ut? Eaque ratione voluptate iure cumque quos odit
+          culpa laborum cum laboriosam, quisquam eius facere cupiditate?
+        </p>
+        <p>
+          <span>Goals-4 : </span>Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Veritatis sequi impedit illum consequatur assumenda
+          repellat! Vitae, soluta asperiores. Incidunt deserunt cumque culpa
+          quibusdam porro nulla voluptate nostrum ducimus cum temporibus, illum
+          eius ipsam, quisquam ut? Eaque ratione voluptate iure cumque quos odit
+          culpa laborum cum laboriosam, quisquam eius facere cupiditate?
+        </p>
+        <p>
+          <span>Goals-5 : </span>Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Veritatis sequi impedit illum consequatur assumenda
+          repellat! Vitae, soluta asperiores. Incidunt deserunt cumque culpa
+          quibusdam porro nulla voluptate nostrum ducimus cum temporibus, illum
+          eius ipsam, quisquam ut? Eaque ratione voluptate iure cumque quos odit
+          culpa laborum cum laboriosam, quisquam eius facere cupiditate?
+        </p>
+      </aside>
+      <!-- End Aside -->
+    </main>
+    <!-- End Main -->
+
+    <!-- Start Footer -->
+    <footer class="footer"></footer>
+    <!-- End Footer -->
+  </body>
 </html>
