completed rules page code and style

--- a/html/rules.html
+++ b/html/rules.html
@@ -1,12 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>simple website with flexbox</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/test-style.css" />
+  </head>
+  <body>
+    <!-- Start Header -->
+    <header class="header">
+      <ul class="header-menu">
+        <li class="menu-item">
+          <a href="index.html" target="_blank">description</a>
+        </li>
+        <li class="menu-item">
+          <a href="goals.html" target="_blank">goals</a>
+        </li>
+        <li class="menu-item">
+          <a href="rules.html" target="_blank">rules</a>
+        </li>
+        <li class="menu-item">
+          <a href="section.html" target="_blank">section</a>
+        </li>
+      </ul>
+    </header>
+    <!-- End Header -->
+
+    <main class="main">
+      <section class="section">
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-1</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-2</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-3</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-4</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-5</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-6</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-7</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-8</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-9</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-10</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/rules.png"
+              alt="rules logo"
+              class="images-rules"
+            />
+            <figcaption>Rules-11</figcaption>
+            <a href="" target="_self" class="link">more</a>
+          </figure>
+        </section>
+      </section>
+
+      <aside class="aside aside-rules">
+        <aside class="aside-child-1">
+          <strong>Rules</strong>
+          <span></span>
+        </aside>
+        <aside class="aside-child-2">
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+          <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
+        </aside>
+      </aside>
+    </main>
+
+    <!-- Start Footer -->
+    <footer class="footer"></footer>
+    <!-- End Footer -->
+  </body>
 </html>
