--- a/html/section.html
+++ b/html/section.html
@@ -26,6 +26,97 @@
       </ul>
     </header>
     <!-- End Header -->
+
+    <main class="main">
+      <section class="section">
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/management-team.png"
+              alt="Management Team banner"
+              class="images-section"
+            />
+            <figcaption>Management Team</figcaption>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/media-team.png"
+              alt="Media Team banner"
+              class="images-section"
+            />
+            <figcaption>Media Team</figcaption>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/english-team.png"
+              alt="English Team banner"
+              class="images-section"
+            />
+            <figcaption>English Team</figcaption>
+          </figure>
+        </section>
+        <section class="section-child">
+          <figure>
+            <img
+              src="../image/teaching-team.png"
+              alt="Teaching Team banner"
+              class="images-section"
+            />
+            <figcaption>Teaching Team</figcaption>
+          </figure>
+        </section>
+      </section>
+
+      <aside class="aside aside-table">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Management</th>
+              <th>Media</th>
+              <th>English</th>
+              <th>Teaching</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+            </tr>
+            <tr>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+            </tr>
+            <tr>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+            </tr>
+            <tr>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+            </tr>
+            <tr>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+              <td>lorem</td>
+            </tr>
+          </tbody>
+        </table>
+      </aside>
+    </main>
+
     <!-- Start Footer -->
     <footer class="footer"></footer>
     <!-- End Footer -->
