added comment in html code

--- a/html/rules.html
+++ b/html/rules.html
@@ -27,7 +27,9 @@
     </header>
     <!-- End Header -->
 
+    <!-- Start Main -->
     <main class="main">
+      <!--Start Section  -->
       <section class="section">
         <section class="section-child">
           <figure>
@@ -151,7 +153,9 @@
           </figure>
         </section>
       </section>
+      <!-- End Section -->
 
+      <!-- Start Aside -->
       <aside class="aside aside-rules">
         <aside class="aside-child-1">
           <strong>Rules</strong>
@@ -171,7 +175,9 @@
           <p><strong>rules- : </strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis odio autem reiciendis, porro fugit et?</p>
         </aside>
       </aside>
+      <!-- End Aside -->
     </main>
+    <!-- End Main -->
 
     <!-- Start Footer -->
     <footer class="footer"></footer>
