--- a/html/section.html
+++ b/html/section.html
@@ -27,7 +27,9 @@
     </header>
     <!-- End Header -->
 
+    <!-- Start Main -->
     <main class="main">
+      <!-- Start Section -->
       <section class="section">
         <section class="section-child">
           <figure>
@@ -70,7 +72,9 @@
           </figure>
         </section>
       </section>
+      <!-- End Section -->
 
+      <!-- Start Aside -->
       <aside class="aside aside-table">
         <table class="table">
           <thead>
@@ -115,7 +119,9 @@
           </tbody>
         </table>
       </aside>
+      <!-- End Aside -->
     </main>
+    <!-- End Main -->
 
     <!-- Start Footer -->
     <footer class="footer"></footer>
